# TcpSenter

./: CMakelists.txt  README.md  main.cpp  tcpSender.pro  widget.cpp  widget.ui
cmake/: qt_setup_install.cmake
src/: CMakeLists.txt  main.cpp  widget.h
